--- a/demo/child.html
+++ b/demo/child.html
@@ -8,7 +8,7 @@
   <body>
     <p>儿子</p>
     <p id="opt"></p>
-    <button class="b" id="b">点击</button>
+    <button class="b" id="b">click</button>
     <script type="module">
       import { Iframe } from '../Iframe.js';
       var opt = document.getElementById('opt');
@@ -27,22 +27,20 @@
 
       // receive messages callback
       parent.message = (data) => {
-        console.log('child接收普通消息', data);
+        console.log('child  Received default message', data);
         const { msg } = data.data;
         opt.innerText = msg;
       };
 
-      // 绑定自定义消息事件
+      // Bind custom message events
       parent.action('handel', (e) => {
-        console.log('child接收到自定义消息', e);
+        console.log('child  Received custom message', e);
       });
 
       // click event sendMessage
       ob.onclick = function () {
         count++;
-        // 发送自定义消息
         parent.emit('handel', { msg: 'hello parent' + count });
-        // 发送默认消息
         parent.sendMessage({ msg: 'hello parent' + count });
       };
     </script>
