--- a/demo/child.html
+++ b/demo/child.html
@@ -10,7 +10,7 @@
     <p id="opt"></p>
     <button class="b" id="b">click</button>
     <script type="module">
-      import { Iframe } from '../index.js';
+      import { Iframe } from '../ejs/index.js';
       var opt = document.getElementById('opt');
       var ob = document.getElementById('b');
       var count = 0;
