--- a/demo/index.html
+++ b/demo/index.html
@@ -22,7 +22,7 @@
     <button class="b" id="b">click</button>
     <iframe src="" id="child"></iframe>
     <script type="module">
-      import { Iframe } from '../index.js';
+      import { Iframe } from '../ejs/index.js';
       var opt = document.getElementById('opt');
       var ob = document.getElementById('b');
       var count = 0;
@@ -30,7 +30,7 @@
       // create iframe
       const iframe = new Iframe({
         container: document.getElementById('child'),
-        url: 'https://www.zhuoson.com/demo/iframe/demo/child.html',
+        url: 'http://127.0.0.1:5501/demo/child.html',
         whiteList: ['http://127.0.0.1:5501', 'https://www.zhuoson.com'], // add white list
       });
 
